Support JDK 8 (#5)
* support JDK 8

* change ci jdk version